--- a/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Shared/App.xaml
+++ b/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Shared/App.xaml
@@ -2,11 +2,29 @@
     x:Class="DemoApp.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:DemoApp">
+    xmlns:local="using:DemoApp"
+    RequestedTheme="Light">
 
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary>
+                    <Style TargetType="Page">
+                        <Setter Property="Background" Value="Black"/>
+                    </Style>
+                    <Style TargetType="TextBlock">
+                        <Setter Property="Foreground" Value="Black"/>
+                    </Style>
+                    <Style TargetType="TextBox">
+                        <Setter Property="Foreground" Value="Black"/>
+                        <Setter Property="PlaceholderForeground" Value="Black"/>
+                    </Style>
+                    <Style TargetType="Button">
+                        <Setter Property="Foreground" Value="Black"/>
+                        <Setter Property="BorderBrush" Value="Black"/>
+                    </Style>
+                </ResourceDictionary>
+                
                 <!-- Load WinUI resources -->
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
 
@@ -18,6 +36,8 @@
 
                 <!-- Application's custom styles -->
                 <!-- other ResourceDictionaries -->
+                
+                
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
