Added persian language + bump versions

--- a/UI/LocalizationSamples/RuntimeCultureSwitching/UnoLocalization.Shared/LanguageSettings.xaml
+++ b/UI/LocalizationSamples/RuntimeCultureSwitching/UnoLocalization.Shared/LanguageSettings.xaml
@@ -8,6 +8,7 @@
 
 		<Button Content="English" Click="SetAppLanguage" Tag="en" />
 		<Button Content="Français" Click="SetAppLanguage" Tag="fr" />
+        <Button Content="پارسی" Click="SetAppLanguage" Tag="fa" />
 
 		<Button x:Uid="LanguageSettings_GoBack"
 				Content="Go back"
