--- a/UI/UnoSQLiteOneDriveInvoiceSample/Demo/Demo/Demo.Shared/MainPage.xaml
+++ b/UI/UnoSQLiteOneDriveInvoiceSample/Demo/Demo/Demo.Shared/MainPage.xaml
@@ -18,8 +18,7 @@
 
     <winui:TabView x:Name="tabView"
                     Margin="0,35"
-                    Style="{StaticResource TabViewStyle}"
-                    SelectionChanged="tabView_SelectionChanged">
+                    Style="{StaticResource TabViewStyle}">
 
         <winui:TabView.TabItems>
 
