--- a/UI/UnoSQLiteOneDriveInvoiceSample/Demo/Demo/Demo.Shared/Pages/Settings.xaml
+++ b/UI/UnoSQLiteOneDriveInvoiceSample/Demo/Demo/Demo.Shared/Pages/Settings.xaml
@@ -2,137 +2,139 @@
     x:Class="Demo.Pages.Settings"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Demo.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:android ="http://uno.ui.android"
-    xmlns:ios="http://uno.ui.ios"
-    xmlns:macos="http://uno.ui/macos"
-    xmlns:wasm="http://uno.ui/wasm"
-    mc:Ignorable="d android ios macos wasm">
+    mc:Ignorable="d">
 
     <ScrollViewer HorizontalScrollMode="Enabled" VerticalScrollMode="Enabled">
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup>
+                <VisualState x:Name="WideState">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="641" />
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="msGraphPanel.(Grid.Column)" Value="0"/>
+                        <Setter Target="userDetails.(Grid.Column)" Value="1"/>
+                        <Setter Target="userDetails.(Grid.RowSpan)" Value="2" />
+                        <Setter Target="msGraphPanel.(Grid.RowSpan)" Value="2" />
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="NarrowState">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="0" />
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="msGraphPanel.(Grid.Row)" Value="0"/>
+                        <Setter Target="userDetails.(Grid.Row)" Value="1"/>
+                        <Setter Target="userDetails.(Grid.ColumnSpan)" Value="2" />
+                        <Setter Target="msGraphPanel.(Grid.ColumnSpan)" Value="2" />
+                    </VisualState.Setters>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
+
         <Grid>
-            <android:Grid.RowDefinitions>
-                <android:RowDefinition Height="Auto"/>
-                <android:RowDefinition Height="Auto"/>
-            </android:Grid.RowDefinitions>
-
-            <ios:Grid.RowDefinitions>
-                <ios:RowDefinition Height="Auto"/>
-                <ios:RowDefinition Height="Auto"/>                
-            </ios:Grid.RowDefinitions>            
             
-            <win:Grid.ColumnDefinitions>
-                <win:ColumnDefinition Width="2*"/>
-                <win:ColumnDefinition Width="3*"/>
-            </win:Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
 
-            <wasm:Grid.ColumnDefinitions>
-                <wasm:ColumnDefinition Width="2*"/>
-                <win:ColumnDefinition Width="3*"/>
-            </wasm:Grid.ColumnDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="3*"/>
+            </Grid.ColumnDefinitions>
 
-            <macos:Grid.ColumnDefinitions>
-                <macos:ColumnDefinition Width="2*"/>
-                <macos:ColumnDefinition Width="3*"/>
-            </macos:Grid.ColumnDefinitions>
+            
 
-            <Grid x:Name="msGraphPanel"
-                  Margin="10" 
-                  HorizontalAlignment="Stretch" 
-                  VerticalAlignment="Stretch">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
+            <Border x:Name="msGraphPanel"
+                    Grid.Row="0"
+                    Background="Transparent">
+                <StackPanel Margin="10" 
+                    HorizontalAlignment="Stretch" 
+                    VerticalAlignment="Stretch">                 
 
-                <Border Background="{ThemeResource SecondaryGradientStyle}"
+                    <Border Background="{ThemeResource SecondaryGradientStyle}"
                     CornerRadius="3"
                     Margin="0,5"
                     BorderThickness="2"
                     BorderBrush="{ThemeResource Gray-Bg}">
-                    <StackPanel Padding="5">
-                        <TextBlock Text="Connect to OneDrive"
+                        <StackPanel Padding="5">
+                            <TextBlock Text="Connect to OneDrive"
                                Margin="0,10"
                            Style="{StaticResource TitleLabelStyle}"/>
-                        <ToggleSwitch Header="Connect to Microsoft account" 
+                            <ToggleSwitch Header="Connect to Microsoft account" 
                                   OffContent="SignIn" 
                                   OnContent="SignOut"
                                   Toggled="ToggleSwitch_Toggled"
                                   IsOn="{Binding IsSignedIn}"/>
 
-                        <TextBlock Text="OneDrive User Details "
+                            <TextBlock Text="OneDrive User Details "
                                Margin="0,10"
                            Style="{StaticResource TitleLabelStyle}"/>
 
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="2*"/>
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Text="Name : "
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="2*"/>
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Text="Name : "
                                    Style="{StaticResource SimpleLabelStyle}"/>
-                            <TextBlock Text="{Binding Username}"
+                                <TextBlock Text="{Binding Username}"
                                    Grid.Column="1"
                                    Style="{StaticResource DescriptionLabelStyle}"/>
-                        </Grid>
+                            </Grid>
 
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="2*"/>
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Text="Email : "
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="2*"/>
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Text="Email : "
                                    Style="{StaticResource SimpleLabelStyle}"/>
-                            <TextBlock Text="{Binding UserEmail}"
+                                <TextBlock Text="{Binding UserEmail}"
                                    Grid.Column="1"
                                    Style="{StaticResource DescriptionLabelStyle}"/>
-                        </Grid>
+                            </Grid>
 
-                    </StackPanel>
-                </Border>
-                <Border Background="{ThemeResource SecondaryGradientStyle}"
-                    Grid.Row="1"
+                        </StackPanel>
+                    </Border>
+                    <Border Background="{ThemeResource SecondaryGradientStyle}"
                     CornerRadius="3"
                     BorderThickness="2"
                     Margin="0,5"
                     BorderBrush="{ThemeResource Gray-Bg}">
-                    <StackPanel Padding="5">
-                        <TextBlock Text="Back Up Or Restore Database "
+                        <StackPanel Padding="5">
+                            <TextBlock Text="Back Up Or Restore Database "
                                Margin="0,10"
                            Style="{StaticResource TitleLabelStyle}"/>
 
-                        <Button x:Name="backUpBtn"
+                            <Button x:Name="backUpBtn"
                             Content="Back Up Database"
                             Padding="10"
                             Margin="0,5"
                             Style="{StaticResource GradientButtonStyle}"
                             Click="BackUpButtonClicked"/>
-                        <Button x:Name="restoreBtn"
+                            <Button x:Name="restoreBtn"
                             Padding="10"
                             Margin="0,5"
                             Content="Restore Database"
                             Style="{StaticResource GradientButtonStyle}"
                             Click="RestoreButtonClicked"/>
 
-                    </StackPanel>
-                </Border>
-            </Grid>
+                        </StackPanel>
+                    </Border>
+                </StackPanel>
+            </Border>
 
             <Border x:Name="userDetails"
-                    win:Grid.Column="1"
-                    wasm:Grid.Column="1"
-                    macos:Grid.Column="1"                    
-                    android:Grid.Row="1"
-                    ios:Grid.Row="1"                    
-                Background="{ThemeResource SecondaryGradientStyle}"
-                CornerRadius="3"
-                BorderThickness="2"
-                HorizontalAlignment="Stretch"
-                BorderBrush="{ThemeResource Gray-Bg}"
-                Margin="10">
+                    Background="{ThemeResource SecondaryGradientStyle}"
+                    CornerRadius="3"
+                    BorderThickness="2"
+                    HorizontalAlignment="Stretch"
+                    BorderBrush="{ThemeResource Gray-Bg}"
+                    Margin="10">
                 <StackPanel Padding="5"
                         Margin="0,5">
                     <TextBlock Text="User Bank Details"
@@ -186,7 +188,9 @@
 
                 </StackPanel>
             </Border>
+
             
+
         </Grid>
-    </ScrollViewer>
+    </ScrollViewer>   
 </Page>
