--- a/UI/AutoSuggestSample/AutoSuggestSample/AutoSuggestSample.Shared/App.xaml
+++ b/UI/AutoSuggestSample/AutoSuggestSample/AutoSuggestSample.Shared/App.xaml
@@ -4,5 +4,14 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:AutoSuggestSample"
     RequestedTheme="Light">
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
+                <!-- Add resource dictionaries here -->
+            </ResourceDictionary.MergedDictionaries>
+            <!-- Add resources here -->
+        </ResourceDictionary>
+    </Application.Resources>
 
 </Application>
