--- a/UI/EmbeddedResources/EmbeddedResourcesSample/EmbeddedResourcesSample.Shared/App.xaml
+++ b/UI/EmbeddedResources/EmbeddedResourcesSample/EmbeddedResourcesSample.Shared/App.xaml
@@ -4,4 +4,13 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:EmbeddedResourcesSample">
 
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
+                <!-- Add resource dictionaries here -->
+            </ResourceDictionary.MergedDictionaries>
+            <!-- Add resources here -->
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
