--- a/UI/LocalizationSamples/RuntimeCultureSwitching/UnoLocalization.Shared/LanguageSettings.xaml
+++ b/UI/LocalizationSamples/RuntimeCultureSwitching/UnoLocalization.Shared/LanguageSettings.xaml
@@ -1,7 +1,8 @@
 ﻿<Page x:Class="UnoLocalization.LanguageSettings"
 	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	  xmlns:toolkit="using:Uno.UI.Toolkit">
+	  xmlns:toolkit="using:Uno.UI.Toolkit"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
 	<StackPanel toolkit:VisibleBoundsPadding.PaddingMask="Top">
 		<TextBlock x:Uid="LanguageSettings_Title" Text="Language Settings" FontSize="30" />
