--- a/UI/LocalizationSamples/RuntimeCultureSwitching/UnoLocalization.Shared/Page1.xaml
+++ b/UI/LocalizationSamples/RuntimeCultureSwitching/UnoLocalization.Shared/Page1.xaml
@@ -1,7 +1,8 @@
 ﻿<Page x:Class="UnoLocalization.Page1"
 	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	  xmlns:toolkit="using:Uno.UI.Toolkit">
+	  xmlns:toolkit="using:Uno.UI.Toolkit"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
 	<StackPanel toolkit:VisibleBoundsPadding.PaddingMask="Top">
 		<TextBlock x:Uid="Page1_Title" Text="Page one" FontSize="30" />
