--- a/UI/NativeFrameNav/NativeFrameNav.Shared/MainPage.xaml
+++ b/UI/NativeFrameNav/NativeFrameNav.Shared/MainPage.xaml
@@ -5,7 +5,8 @@
 	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	  xmlns:toolkit="using:Uno.UI.Toolkit"
-	  mc:Ignorable="d">
+	  mc:Ignorable="d"
+	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
 	<Grid toolkit:VisibleBoundsPadding.PaddingMask="Top">
 		<Grid.RowDefinitions>
