--- a/UI/TheCatApiClient/TheCatApiClient/TheCatApiClient.Shared/MainPage.xaml
+++ b/UI/TheCatApiClient/TheCatApiClient/TheCatApiClient.Shared/MainPage.xaml
@@ -9,14 +9,14 @@
     xmlns:datamodels="using:TheCatApiClient.Shared.Models.DataModels"
     xmlns:toolkit="using:Uno.UI.Toolkit"
     Name="Main"
-    mc:Ignorable="d">
+    mc:Ignorable="d" 
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Page.DataContext>
         <viewmodels:MainViewModel x:Name="ViewModel" />
     </Page.DataContext>
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-          toolkit:VisibleBoundsPadding.PaddingMask="All">
+    <Grid toolkit:VisibleBoundsPadding.PaddingMask="All">
         <Grid Padding="4">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
