--- a/UI/UnoCupertinoSample/UnoCupertinoSample.Shared/MainPage.xaml
+++ b/UI/UnoCupertinoSample/UnoCupertinoSample.Shared/MainPage.xaml
@@ -5,9 +5,10 @@
 	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	  xmlns:toolkit="using:Uno.UI.Toolkit"
-	  mc:Ignorable="d">
+	  mc:Ignorable="d"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-	<Grid toolkit:VisibleBoundsPadding.PaddingMask="Top">
+    <Grid toolkit:VisibleBoundsPadding.PaddingMask="Top">
 		<ScrollViewer>
 			<StackPanel Margin="16,0"
 						Spacing="8">
