chore: UnoMaterialSample Uno 4.1.9

--- a/UI/UnoMaterialSample/UnoMaterialSample.Shared/App.xaml
+++ b/UI/UnoMaterialSample/UnoMaterialSample.Shared/App.xaml
@@ -9,11 +9,18 @@
 				<!-- Load WinUI resources -->
 				<XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
 
+                <ToolkitResources xmlns="using:Uno.Toolkit.UI" /> 
+                
 				<MaterialColors xmlns="using:Uno.Material"
-								ColorPaletteOverrideSource="ms-appx:///Styles/Application/ColorPaletteOverride.xaml"/>
-				<MaterialResources xmlns="using:Uno.Material" />
-				
-				<!-- Application's custom styles -->
+								OverrideSource="ms-appx:///Styles/Application/ColorPaletteOverride.xaml"/>
+                
+                <MaterialResources xmlns="using:Uno.Material" />
+ 
+                <MaterialToolkitResources xmlns="using:Uno.Toolkit.UI.Material" />
+
+
+
+                <!-- Application's custom styles -->
 				<!-- other ResourceDictionaries -->
 			</ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
