--- a/UI/UnoMaterialSample/UnoMaterialSample.Shared/MainPage.xaml
+++ b/UI/UnoMaterialSample/UnoMaterialSample.Shared/MainPage.xaml
@@ -2,9 +2,11 @@
 	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	  xmlns:toolkit="using:Uno.UI.Toolkit"
-	  xmlns:material="using:Uno.Material.Controls">
+	  xmlns:utu="using:Uno.Toolkit.UI"
+	  xmlns:material="using:Uno.Material"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-	<Grid toolkit:VisibleBoundsPadding.PaddingMask="Top" >
+    <Grid toolkit:VisibleBoundsPadding.PaddingMask="Top" >
 		<ScrollViewer>
 			<StackPanel Margin="16,0" Spacing="8">
 				<!-- controls with material styles -->
@@ -16,26 +18,26 @@
 				<TextBox Text="input" Style="{StaticResource MaterialFilledTextBoxStyle}" />
 				
 				<!-- material controls -->
-				<material:Divider SubHeader="Uno.Material Controls:" Style="{StaticResource MaterialDividerStyle}" />
-				<material:Card HeaderContent="Material Design"
+                <utu:Divider SubHeader="Uno.Material Controls:" Style="{StaticResource MaterialDividerStyle}" />
+                <utu:Card HeaderContent="Material Design"
 					   SupportingContent="Material is a design system created by Google to help teams build high-quality digital experiences for Android, iOS, Flutter, and the web."
 					   Style="{StaticResource MaterialOutlinedCardStyle}">
-					<material:Card.HeaderContentTemplate>
+                    <utu:Card.HeaderContentTemplate>
 						<DataTemplate>
 							<TextBlock Text="{Binding}" Margin="16,14,16,0" Style="{ThemeResource MaterialHeadline6}" />
 						</DataTemplate>
-					</material:Card.HeaderContentTemplate>
-					<material:Card.SupportingContentTemplate>
+					</utu:Card.HeaderContentTemplate>
+                    <utu:Card.SupportingContentTemplate>
 						<DataTemplate>
 							<TextBlock Text="{Binding}" Margin="16,0,16,14" Style="{ThemeResource MaterialBody2}" />
 						</DataTemplate>
-					</material:Card.SupportingContentTemplate>
-				</material:Card>
-				<material:ChipGroup SelectionMode="Multiple" Style="{StaticResource MaterialChipGroupStyle}">
-					<material:Chip Content="Uno" Style="{StaticResource MaterialChipStyle}" />
-					<material:Chip Content="Material" Style="{StaticResource MaterialChipStyle}" />
-					<material:Chip Content="Controls" Style="{StaticResource MaterialChipStyle}" />
-				</material:ChipGroup>
+					</utu:Card.SupportingContentTemplate>
+				</utu:Card>
+                <utu:ChipGroup SelectionMode="Multiple" Style="{StaticResource MaterialFilledInputChipGroupStyle}">
+                    <utu:Chip Content="Uno" Style="{StaticResource MaterialFilledInputChipStyle}" />
+                    <utu:Chip Content="Material" Style="{StaticResource MaterialFilledInputChipStyle}" />
+                    <utu:Chip Content="Controls" Style="{StaticResource MaterialFilledInputChipStyle}" />
+				</utu:ChipGroup>
 			</StackPanel>
 		</ScrollViewer>
 	</Grid>
