fix: Adjust SkiaSharp template for x:Bind error
WMC1121: Invalid binding assignment : Events can only be bound to non-overloaded methods

--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Shared/MainPage.xaml
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Shared/MainPage.xaml
@@ -2,11 +2,13 @@
     x:Class="SkiaSharpTest.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:xamarin="http://uno.ui/xamarin"
     xmlns:local="using:SkiaSharpTest"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:skia="using:SkiaSharp.Views.UWP"
-    mc:Ignorable="d" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    mc:Ignorable="d xamarin"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
 		<Grid.RowDefinitions>
@@ -21,14 +23,14 @@
 			<skia:SKSwapChainPanel
 				x:Name="swapChain"
 				PaintSurface="OnPaintSwapChain"
-				PointerMoved="{x:Bind OnPointerMoved}" 
-				Background="Transparent"
+				PointerMoved="{x:Bind OnSurfacePointerMoved}"
+				xamarin:Background="Transparent"
 				Visibility="{x:Bind hwAcceleration.IsChecked, Mode=OneWay}" />
 			<skia:SKXamlCanvas 
 				x:Name="canvas" 
 				PaintSurface="OnPaintSurface"
-				PointerMoved="{x:Bind OnPointerMoved}"
-				Background="Transparent"
+				PointerMoved="{x:Bind OnSurfacePointerMoved}"
+				xamarin:Background="Transparent"
 				Visibility="{x:Bind Not(hwAcceleration.IsChecked), Mode=OneWay}" />
 		</Grid>
 	</Grid>
