--- a/reference/Uno.Extensions.Commerce/Commerce.UI/Views/DealsPage.xaml
+++ b/reference/Uno.Extensions.Commerce/Commerce.UI/Views/DealsPage.xaml
@@ -109,7 +109,11 @@
 				<utu:NavigationBar Content="Uno Commerce"
 								   Background="{ThemeResource PrimaryBrush}"
 								   Style="{StaticResource ModalNavigationBarStyle}"
-								   x:Uid="Deals_Navigation_Bar" />
+								   x:Uid="Deals_Navigation_Bar">
+					<utu:NavigationBar.PrimaryCommands>
+						<AppBarButton Label="Refresh" Command="{Binding ElementName=DealsFeedView, Path=State.Refresh}" />
+					</utu:NavigationBar.PrimaryCommands>
+				</utu:NavigationBar>
 
 				<utu:TabBar uen:Region.Attached="True"
 							Style="{StaticResource TopTabBarStyle}">
@@ -175,7 +179,8 @@
 											  SelectionMode="None"
 											  IsItemClickEnabled="True"
 											  uen:Navigation.Request="DealsProduct"
-											  Style="{StaticResource ListViewStyle}" />
+											  Style="{StaticResource ListViewStyle}">
+									</ListView>
 								</Grid>
 							</UserControl>
 						</DataTemplate>
@@ -227,7 +232,28 @@
 											  SelectionMode="None"
 											  IsItemClickEnabled="True"
 											  uen:Navigation.Request="DealsProduct"
-											  Style="{StaticResource ListViewStyle}" />
+											  Style="{StaticResource ListViewStyle}" >
+
+										<ListView.Footer>
+											<Grid Background="Pink">
+												<Grid.RowDefinitions>
+													<RowDefinition Height="Auto" />
+													<RowDefinition Height="Auto" />
+												</Grid.RowDefinitions>
+
+												<!--<ProgressBar Grid.Row="0"
+															 IsIndeterminate="{Binding Data.ExtendedProperties.IsLoadingMoreItems}"
+														 HorizontalAlignment="Stretch"
+														 Visibility="{Binding Data.ExtendedProperties.IsLoadingMoreItems}" />-->
+												<StackPanel>
+													<TextBlock Text="{Binding Data}" />
+													<TextBlock Text="{Binding Data.ExtendedProperties}" />
+													<TextBlock Text="{Binding Data.ExtendedProperties.HasMoreItems}" />
+													<TextBlock Text="{Binding Data.ExtendedProperties.IsLoadingMoreItems}" />
+												</StackPanel>
+											</Grid>
+										</ListView.Footer>
+									</ListView>
 								</Grid>
 							</UserControl>
 						</DataTemplate>
