--- a/UI/UnoIslandsSampleApp/WpfApp/App.xaml
+++ b/UI/UnoIslandsSampleApp/WpfApp/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="UnoIslandsSampleApp.WPF.Host.App"
+﻿<Application x:Class="WpfApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:UnoIslandsSampleApp.WPF.Host"
+             xmlns:local="clr-namespace:WpfApp"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
