--- a/UI/UnoIslandsSampleApp/WpfApp/MainWindow.xaml
+++ b/UI/UnoIslandsSampleApp/WpfApp/MainWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="UnoIslandsSampleApp.WPF.Host.MainWindow"
+﻿<Window x:Class="WpfApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:UnoIslandsSampleApp.WPF.Host"
         xmlns:xamlHost="clr-namespace:Uno.UI.XamlHost.Skia.Wpf;assembly=Uno.UI.XamlHost.Skia.Wpf"
+       
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid Margin="20">
