--- a/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Shared/Views/AuthorPage.xaml
+++ b/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Shared/Views/AuthorPage.xaml
@@ -7,6 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:utu="using:Uno.Toolkit.UI"
 	xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
+	Padding="0,50"
 	mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
