--- a/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Shared/Views/BookPage.xaml
+++ b/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Shared/Views/BookPage.xaml
@@ -9,6 +9,7 @@
 	xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
 	xmlns:vm="using:UnoGoodReads.ViewModels"
 	xmlns:converters="using:UnoGoodReads.Converters"
+	Padding="0,50"
 	mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
