fix: grid spacing

--- a/UI/AdvancedXBind/AdvancedXBind.Shared/MainPage.xaml
+++ b/UI/AdvancedXBind/AdvancedXBind.Shared/MainPage.xaml
@@ -12,7 +12,7 @@
     <Page.Resources>
         <converters:DoubleToStringConverter x:Key="DoubleToStringConverter"/>
     </Page.Resources>
-    <Grid DataContext="{x:Bind vm:PlanetViewModel.Create('Jupiter')}" Margin="100" RowSpacing="20" HorizontalAlignment="Stretch" VerticalAlignment="Top">
+    <Grid DataContext="{x:Bind vm:PlanetViewModel.Create('Jupiter')}" Margin="80" RowSpacing="20" ColumnSpacing="10" HorizontalAlignment="Stretch" VerticalAlignment="Top">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*"/>
