--- a/UI/AdvancedXBind/AdvancedXBind.Shared/MainPage.xaml
+++ b/UI/AdvancedXBind/AdvancedXBind.Shared/MainPage.xaml
@@ -8,6 +8,7 @@
     xmlns:sys="using:System"
     xmlns:vm="using:AdvancedXBind.ViewModel"
     mc:Ignorable="d"
+    Background="White"
     >
     <Page.Resources>
         <converters:DoubleToStringConverter x:Key="DoubleToStringConverter"/>
@@ -25,13 +26,13 @@
             <RowDefinition />
         </Grid.RowDefinitions>
         <TextBlock Text="{Binding Planet.Name}" Grid.ColumnSpan="2" HorizontalAlignment="Center" FontSize="32" Foreground="IndianRed" Margin="5,5,5,15"/>
-        <TextBlock Grid.Row="1" HorizontalAlignment="Right" FontWeight="Bold" >Enter your weight on Earth:</TextBlock>
+        <TextBlock Grid.Row="1" HorizontalAlignment="Right" TextWrapping="WrapWholeWords" FontWeight="Bold" >Enter your weight on Earth:</TextBlock>
         <TextBox Grid.Row="1" Grid.Column="1" x:Name="tb" />
-        <TextBlock Grid.Row="2" HorizontalAlignment="Right" FontWeight="Bold">Your weight on Jupiter:</TextBlock>
+        <TextBlock Grid.Row="2" HorizontalAlignment="Right" TextWrapping="WrapWholeWords" FontWeight="Bold">Your weight on Jupiter:</TextBlock>
         <TextBlock Text="{x:Bind ViewModel.WeightOnPlanet(tb.Text), Mode=OneWay}" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2"/>
         <Button Grid.Row="3" HorizontalAlignment="Right" Content="Display Planet Information" Click="{x:Bind DisplayPlanetSync}"/>
         <TextBlock Grid.Row="3" Grid.Column="1" Text="{x:Bind GetResultOfAsyncMethod()}"/>
-        <TextBlock Grid.Row="4" HorizontalAlignment="Right" FontWeight="Bold" Text="Approx Planet Density (KG/M3):"/>
+        <TextBlock Grid.Row="4" HorizontalAlignment="Right" FontWeight="Bold" TextWrapping="WrapWholeWords" Text="Approx Planet Density (KG/M3):"/>
         <TextBlock Grid.Row="4" Grid.Column="1" Text="{x:Bind ViewModel.CalculateDensity(ViewModel.Planet.Mass, ViewModel.Planet.Diameter)}"/>
     </Grid>
 </Page>
